fixed the scrollbar issue, changed the icon file type to webp on ThreeCanvas.svelte and deleted all png icons for webp, made Skills.svelte better with display: grid

--- a/src/app.css
+++ b/src/app.css
@@ -68,19 +68,21 @@
 	--orbitron: 'Orbitron', sans-serif;
 }
 
-:root ::-webkit-scrollbar {
+:root::-webkit-scrollbar {
 	width: 15px;
 	height: 10px;
 	background-color: var(--lightblack);
 	border-radius: 5px;
 	box-shadow: 0 0 10px var(--blackest);
 }
-:root ::-webkit-scrollbar-thumb {
+
+:root::-webkit-scrollbar-thumb {
 	background-color: var(--purple);
 	border-radius: 2px;
 	box-shadow: 0 0 10px var(--blackest);
 }
-:root ::-webkit-scrollbar-thumb:hover {
+
+:root::-webkit-scrollbar-thumb:hover {
 	background-color: var(--blue);
 }
 
@@ -89,6 +91,7 @@
 	margin: 0;
 	padding: 0;
 	cursor: url('/icons/pointer.svg'), auto;
+	scrollbar-color: var(--purple) var(--lightblack);
 }
 
 body {
